public/css/app.css
/* ... */
@media (max-width: 767px) {
  .visible-xs {
    display: block !important;
  }
  table.visible-xs {
    display: table;
  }
  tr.visible-xs {
    display: table-row !important;
  }
  th.visible-xs,
  td.visible-xs {
    display: table-cell !important;
  }
}
@media (max-width: 767px) {
  .visible-xs-block {
    display: block !important;
  }
}
@media (max-width: 767px) {
  .visible-xs-inline {
    display: inline !important;
  }
}
@media (max-width: 767px) {
  .visible-xs-inline-block {
    display: inline-block !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm {
    display: block !important;
  }
  table.visible-sm {
    display: table;
  }
  tr.visible-sm {
    display: table-row !important;
  }
  th.visible-sm,
  td.visible-sm {
    display: table-cell !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm-block {
    display: block !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm-inline {
    display: inline !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm-inline-block {
    display: inline-block !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md {
    display: block !important;
  }
  table.visible-md {
    display: table;
  }
  tr.visible-md {
    display: table-row !important;
  }
  th.visible-md,
  td.visible-md {
    display: table-cell !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-block {
    display: block !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-inline {
    display: inline !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md-inline-block {
    display: inline-block !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg {
    display: block !important;
  }
  table.visible-lg {
    display: table;
  }
  tr.visible-lg {
    display: table-row !important;
  }
  th.visible-lg,
  td.visible-lg {
    display: table-cell !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-block {
    display: block !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-inline {
    display: inline !important;
  }
}
@media (min-width: 1200px) {
  .visible-lg-inline-block {
    display: inline-block !important;
  }
}
@media (max-width: 767px) {
  .hidden-xs {
    display: none !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .hidden-sm {
    display: none !important;
  }
}
@media (min-width: 992px) and (max-width: 1199px) {
  .hidden-md {
    display: none !important;
  }
}
@media (min-width: 1200px) {
  .hidden-lg {
    display: none !important;
  }
}
.visible-print {
  display: none !important;
}
@media print {
  .visible-print {
    display: block !important;
  }
  table.visible-print {
    display: table;
  }
  tr.visible-print {
    display: table-row !important;
  }
  th.visible-print,
  td.visible-print {
    display: table-cell !important;
  }
}
.visible-print-block {
  display: none !important;
}
@media print {
  .visible-print-block {
    display: block !important;
  }
}
.visible-print-inline {
  display: none !important;
}
@media print {
  .visible-print-inline {
    display: inline !important;
  }
}
.visible-print-inline-block {
  display: none !important;
}
@media print {
  .visible-print-inline-block {
    display: inline-block !important;
  }
}
@media print {
  .hidden-print {
    display: none !important;
  }
}
body,
label,
.checkbox label {
  font-weight: 300;
}
.paddlft {
  padding-left: -15px;
  padding-right: -15px;
}
.container-main {
  max-width: 1024px;
}
.search {
  max-width: 1024px;
  margin: 0 auto;
  /*border: 1px solid red;*/
}

.rovn {
  width: 95%;
  margin: 0 auto;
}

.text {
  text-align:  center;
}
.menu {
    margin: 10px;
}
.col-search{
    margin: 10px 0;
}
.form-control {
    width:85%;
    display: inline-block;
    height: 44px; /*Stoha*/
    font-size: 14px;
    color: #555555;
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border-radius: 4px 0 0 4px;
}
.btn-search {
    width: 15%;
    margin-left: -4px;
    vertical-align: top;
    border-radius: 0 4px 4px 0;
    display: inline-block;
    border-left: none;
}
.list-inline {
  margin-top: 30px;
  list-style-type: none;
  color: darkorange;
  margin-bottom: 20px;
}

/*Oleh Rostov*/
.c_h3{
  margin-left: 30px;
}
.icon{
  color: rgb(240, 124, 1);
  font-size: 18px;
  padding-right: 0px;
  width: 45px;
}
.c_link{
  font-size: 18px;
  padding-left: 0px;
}
.c_link a:link{
  color: black;
  text-decoration: none;
}
.c_link a:visited{
  color: black;
  text-decoration: none;
}
.c_phone > p {
  font-size: 18px;
  padding-left: 0px;
  font-weight: 400;
}
@media (max-width: 767px){
  .c_xs{
    margin-left: 25px;
  }
}
/*Oleh Rostov*/

/********FOOTER********/
.footer{
  font-family: SegoeUIRegular;
  overflow:hidden;
}
.down-footer img{
  margin-left: 10px;
}
.footer ul, .footer  li{
  list-style-type:none;
  padding-bottom: 10px;
}

.footer a{
  color: #9d9d9d;
}

.container-footer {
  background-color: #3f3e3e;
  padding: 20px 0;
  margin-top: 30px;
  color: #9d9d9d;
  font-size: 18px;
}
.container-footer i{
  color: #d17c11;
  margin-right: 15px;
}

.inner-footer{
  float: left;
}
.inner-footer img{
  margin-right: 10px;
}

.inner-footer hr{
  margin:0px 0px 20px 0px;
}

.down-footer{

  background-color: #8f8f8f;
  font-size: 14px;
  padding: 20px;
}


.li_header{
  margin: 30px 0px 20px 0px;
  padding: 0px;
  font-family: ACLine;
  font-size:24px;
  color: white;
  font-weight: bold;
}

.li_header img{
  margin-right: 10px;
}

.footer a:hover{
  color: #d17c11;
  text-decoration: none;
}

.footer :link{
  text-decoration: none;
}

.fa-soc {
  color: #3f3e3e;
  margin-left: 10px;
}
.fa-soc:hover {
  color:#d17c11;

}



////////////* HEADER_NEW */

